c4prj3_finish/grade.txt
Grading at Mon Aug 10 16:47:18 UTC 2020
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o cards.o cards.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o deck.o deck.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o eval.o eval.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o future.o future.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o input.o input.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o main.o main.c
main.c: In function ‘main’:
main.c:125:1: error: ISO C forbids nested functions [-Werror=pedantic]
 int win_hand(deck_t ** deck_array,int n_hands){
 ^
main.c:154:1: error: ISO C forbids nested functions [-Werror=pedantic]
 int main(int argc, char ** argv) {
 ^
main.c:154:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main(int argc, char ** argv) {
     ^
main.c:211:1: error: expected declaration or statement at end of input
 }
 ^
cc1: all warnings being treated as errors
<builtin>: recipe for target 'main.o' failed
make: *** [main.o] Error 1
make failed

Overall Grade: F
